add styles; add screenshot

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Yandex music</title>
     <style>
       html, body {
         width: 100%;
