--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <webview class="view" src="https://music.yandex.ru/" allowpopups></webview>
+    <webview class="view" src="https://music.yandex.ru/" preload="./nextTrackListener.js" allowpopups></webview>
 
     <script>
       require('./renderer.js')
